--- a/styles/nav.css
+++ b/styles/nav.css
@@ -1,13 +1,24 @@
 .nav-bar {
     margin-top: 32pt;
     text-align: center;
+    max-height: 28px;
 }
 
 .nav-button {
     margin-left: 8pt;
     margin-right: 8pt;
+    padding:0 10px;
+    border-right: 1px solid black;
+    border-left: 1px solid black;
+    transition: ease-in;
+    transition-duration: .2s;
+    transform-origin: center;
 }
 
 .inline {
     display: inline;
+}
+
+.inline:hover a{
+    font-size: 30px;
 }
