--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,13 +1,3 @@
-body {
-    margin: 0;
-    background-color: #ececec;
-}
-
-* {
-    font-family: sans-serif;
-    color: #414141;
-}
-
 .project-content {
     margin-left: 16pt;
     margin-right: 16pt;
@@ -16,6 +6,7 @@ body {
 }
 
 .project {
+    padding-left: 25px;
     margin-left: 12pt;
     margin-right: 12pt;
     margin-top: 16pt;
@@ -30,9 +21,9 @@ body {
     box-shadow: 0 0 10pt gray;
 }
 
-.p-title {
-    font-size: 24pt;
-    font-weight: bold;
+.main-header {
+    padding-left: 75px;
+    font-size: 45px;
 }
 
 .p-description {
@@ -64,4 +55,14 @@ body {
 
 .resume {
     padding-left: 10pt;
+}
+
+.p-description {
+    display: block;
+    margin-top: 15px;
+    font-size: 17px;
+}
+
+.image {
+    margin: 15px 10px 0 0;
 }
