--- a/styles/tea.css
+++ b/styles/tea.css
@@ -8,11 +8,48 @@ body {
     color: #414141;
 }
 
+.main {
+    padding-bottom: 100px;
+}
+
 .centered {
     margin-top: 50pt;
     text-align: center;
+
+    font-size: 35px;
+    padding-bottom: 32px;
 }
 
 .image {
     height: 250pt;
+}
+
+h3 {
+    font-size: 18px;
+    font-weight: normal;
+}
+
+.tea-wrapper {
+    display: flex;
+    justify-content: space-between;
+    width: 70%;
+    margin: 24px auto 0;
+}
+
+.tea-item {
+    width: 40%;
+    max-width: 444px;
+    background: white;
+    border-radius: 20pt;
+    clip-path: border-box;
+}
+
+.rating {
+    position: absolute;
+    text-shadow: 0 0 10px rgba(255, 255, 255, 0.4);
+}
+
+.tea-item h2, h3, .rating {
+    padding-left: 15px;
+    padding-right: 15px;
 }
